Change the names of the players.

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
                 <div class="form-group">
                     <select id="player1" required>
                         <option value="">Select Player 1</option>
-                        <option value="Player 1">Lezter</option>
-                        <option value="Player 2">Jessi</option>
-                        <option value="Player 3">Kumar</option>
+                        <option value="Lezter">Lezter</option>
+                        <option value="Jessi">Jessi</option>
+                        <option value="Kumar">Kumar</option>
                     </select>
                     <input type="number" id="score1" min="0" required placeholder="Score">
                 </div>
                 <div class="form-group">
                     <select id="player2" required>
                         <option value="">Select Player 2</option>
-                        <option value="Player 1">Lezter</option>
-                        <option value="Player 2">Jessi</option>
-                        <option value="Player 3">Kumar</option>
+                        <option value="Lezter">Lezter</option>
+                        <option value="Jessi">Jessi</option>
+                        <option value="Kumar">Kumar</option>
                     </select>
                     <input type="number" id="score2" min="0" required placeholder="Score">
                 </div>
